styles to fix the td problem in the content table - changed vertical align top to center
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@7336 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/browser/stylesheets/main.css
+++ b/recensio/theme/browser/stylesheets/main.css
@@ -2491,6 +2491,9 @@ table.listing, table.plain {
 margin-bottom:10px !important;
 }
 
+table.invisible td, table.invisible th, table.plain td, table.plain th, table.listing td, table.listing th {
+vertical-align:center;
+}
 
 /* Use these classes to set the width of a column. */
 .span-1  { width: 30px; }
